# quoteyourlife-be

./: .dockerignore  .env.example  .example.env  .gitignore  Cargo.toml  DOCKER_GUIDE.md  Dockerfile  README.md  diesel.toml  docker-compose.postgres.yml  docker-compose.yml  postman_collection.json
migrations/2025-07-30-071414_create_quotes/: down.sql  up.sql
migrations/2025-10-22-104419-0000_qyl_migrations/: down.sql  up.sql
migrations/2026-02-25-104908-0000_create_users/: up.sql
migrations/2026-02-25-104909-0000_create_articles/: down.sql  up.sql
src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs  seed.rs
src/handlers/: article.rs  auth.rs  mod.rs  nft.rs  quote.rs  user.rs
src/middlewares/: jwt.rs
src/routes/: article.rs  auth.rs  mod.rs  nft.rs  quote.rs  user.rs
src/utils/: jwt.rs
